--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ streamlit==1.31.0
 yfinance==0.2.33
 pandas==2.2.1
 requests==2.31.0
-duckduckgo-search==0.6.1
-python-docx==0.8.11
-beautifulsoup4==4.12.3
-plotly==5.19.0
-numpy==1.26.4
+duckduckgo-search
+python-docx
+beautifulsoup4
+plotly
+numpy
